[gd_scene load_steps=7 format=3 uid="uid://du28ged46ahng"]

[ext_resource type="Script" uid="uid://1is2mmjko6ua" path="res://Scripts/machine/binaryMachine.gd" id="1_h8qk8"]
[ext_resource type="Script" uid="uid://charp5oxyaipl" path="res://Scripts/machine/components/itemReceiver.gd" id="3_ytnq4"]
[ext_resource type="SpriteFrames" uid="uid://bdu3eyu0mwmgj" path="res://Resources/sprites/binary_machine.tres" id="4_6ytph"]
[ext_resource type="PackedScene" uid="uid://dt8fsl15bq120" path="res://Packed/ItemTransporter.tscn" id="5_h8qk8"]
[ext_resource type="Script" uid="uid://n8oknhffvyem" path="res://Scripts/machine/components/itemCalculator.gd" id="5_hs22x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usf1e"]
size = Vector2(8, 8)

[node name="BinaryMathMachine" type="Node2D"]
script = ExtResource("1_h8qk8")

[node name="ItemReceiver1" type="Area2D" parent="."]
position = Vector2(64, 0)
script = ExtResource("3_ytnq4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemReceiver1"]
shape = SubResource("RectangleShape2D_usf1e")

[node name="ItemReceiver2" type="Area2D" parent="."]
position = Vector2(-64, 0)
script = ExtResource("3_ytnq4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemReceiver2"]
shape = SubResource("RectangleShape2D_usf1e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_6ytph")
autoplay = "default"

[node name="ItemCalculator" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 11.5)
text = "OP"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_hs22x")

[node name="ItemTransporter" parent="." instance=ExtResource("5_h8qk8")]
